# mantissa

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.in  README.md  configure.ac  dub.json  dub.json.in  globals.h.in  install-desktop-entry.sh  linux-install.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  meson.build  postinstall.py  settings.cpp  settings.h  settings.ui
flatpak/: flatpak.yaml
frontend/: about.cpp  about.h  about.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui
resources/: entry.desktop  install.sh  mantissa.desktop  schema.xml
source/: about.d  browser.d  config.d  config.d.in  customview.d  findbar.d  globals.d  globals.d.in  globals.h.in  main.cpp  main.d  options.d  preferences.d  searchbar.d  settings.d  storage.d  tabs.d  translations.d  uri.d
source/backend/: translations.d  uri.d  url.d  webview.cpp  webview.d  webview.h  webviewsettings.d
source/backend/webkit/: context.d  cookiemanager.d  navigationaction.d  settings.d  urirequest.d  webview.d  webviewsettings.d
source/engine/: customview.d
source/frontend/: about.cpp  about.d  about.h  about.ui  browser.d  extramenu.d  history.d  icons.d  mainwindow.ui  options.d  preferences.d  searchbar.d  settings.cpp  settings.h  settings.ui  settingsmenu.d  tabs.d
source/storage/: configdir.d  history.d  usersettings.d
source/ui/: about.d  browser.d  findbar.d  options.d  preferences.d  searchbar.d  tabs.d  translations.d  uri.d
